--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -3,13 +3,11 @@ on:
   push:
     branches:
       - 'master'
-      - 'beta'
-      - 'hotfix/*'
     tags:
       - 'v*.*.*'
 
 env:
-  TEST_TAG: jacobalberty/unifi:test
+  TEST_TAG: nexusforge/unifi-docker:test
   PKGURL: https://dl.ui.com/unifi/6.5.55/unifi_sysvinit_all.deb
 
 jobs:
@@ -24,12 +22,6 @@ jobs:
           platforms: all
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      - name: Login to GitHub Container Resgistry
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Login to DockerHub
         uses: docker/login-action@v2 
         with:
@@ -59,9 +51,7 @@ jobs:
             type=semver,pattern=v{{major}}
             type=semver,pattern=v{{major}}.{{minor}}
             type=ref,event=branch
-          images: |
-            jacobalberty/unifi
-            ghcr.io/${{ github.repository }}
+          images: nexusforge/unifi-docker
       - name: Build container image
         uses: docker/build-push-action@v4
         with:
