--- a/examples/traefikv2/docker-compose.yml
+++ b/examples/traefikv2/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   controller:
-    image: jacobalberty/unifi:$TAG_NAME
+    image: nexusforge/unifi-docker:$TAG_NAME
     container_name: unifi
     networks:
       - unifi
